--- a/style.css
+++ b/style.css
@@ -13,9 +13,16 @@ div{
 
     cursor: pointer;
 }
-
-.gameContainer{
+.gameWindow{
     position:absolute;
+    left:0px;
+    top:0px;
+    width:640px;
+    height:1136px;
+    overflow:hidden;
+}
+.gameContainer{
+    position:relative;
     left:0px;
     top:0px;
     width:640px;
@@ -26,6 +33,13 @@ div.screenSec{
     position:relative;
     width:100%;
     height:340px;
+
+    -webkit-transition: all 3s linear;
+    -o-transition: all 3s linear;
+    -moz-transition: all 3s linear;
+    -ms-transition: all 3s linear;
+    -kthtml-transition: all 3s linear;
+    transition: all 3s linear;
 
 }
 div.screen{
@@ -345,4 +359,14 @@ div.burgerBag{
     background: url('backgrounds/burgerBag.png') top left;
     opacity:0;
     height:0%;
+}
+div.outdoors{
+    position:relative;
+    margin-top:20px;
+    height:1000px;
+    width:640px;
+    top:0px;
+    left:0px;
+
+    background: url('backgrounds/beachScene.png') top left;
 }
