--- a/style.css
+++ b/style.css
@@ -376,6 +376,13 @@ div.phoneContainer{
     left:20px;
     height:800px;
     width:600px;
+
+    -webkit-transition: all 2s linear;
+    -o-transition: all 2s linear;
+    -moz-transition: all 2s linear;
+    -ms-transition: all 2s linear;
+    -kthtml-transition: all 2s linear;
+    transition: all 2s linear;
 }
 div.screenBack {
     position: absolute;
@@ -390,3 +397,50 @@ div.screenGloss{
     top:0px;
     background: url('backgrounds/screenGloss.png');
 }
+div.phoneContent{
+    position:absolute;
+    height:700px;
+    width:560px;
+    margin-left:20px;
+}
+div.phoneContainer h2{
+    color:white;
+    z-index:20;
+    height:100px;
+    width:500px;
+    line-height: 36px;
+}
+div.dayStat{
+    position:relative;
+    float:left;
+    margin:20px;
+    height:100px;
+    width:500px;
+    font-size:80px;
+    top:20px;
+    left:0px;
+    background-color:lightcoral;
+}
+div.cashStat{
+    position:relative;
+    float:left;
+    margin-left:20px;
+    height:100px;
+    width:500px;
+    font-size:80px;
+    top:20px;
+    left:0px;
+    background-color:lightgreen;
+}
+div.ordersCompletedStat{
+    position:relative;
+    float:left;
+    margin-left:20px;
+    height:100px;
+    width:500px;
+    font-size:80px;
+    top:40px;
+    left:0px;
+    background-color:lightgreen;
+}
+
